# tv-search

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  spin.toml
api/hello-rust/: Cargo.toml
api/hello-rust/src/: lib.rs
crates/vespa/: Cargo.toml
crates/vespa/src/: adapter.rs  document.rs  fetch.rs  lib.rs  query.rs  response.rs  vespa.rs
vespa/: services.xml
vespa/schemas/: characters.sd  episodes.sd  series.sd
