[package]
name = "vespa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
